# demo-app-final

./: CMakeLists.txt  README.md  cameraThread.cpp  cameraThread.h  clickableLabel.cpp  clickableLabel.h  dialog.cpp  dialog.h  dialog.ui  first_build.sh  main.cpp  mapInit.cpp
include/: pmlib.h
pmlib/: add_roi_offset.cpp  edge_extract_strongest.cpp  edge_extract_thr_first.cpp  edge_extract_thr_strongest.cpp  edge_link.cpp  enum_funcs.cpp  enum_rotate.cpp  getset.cpp  isolate_channel.cpp  mapSS2RS.cpp  moore_boundary.cpp  moore_neighborhood.cpp  point_in_image.cpp  process_image.cpp  quad_diff_amp.cpp  region_growing.cpp
